2005-08-29  Bill Denney <denney@seas.upenn.edu>

	* image/saveimage.m: Open output file in binary mode.

	* miscellaneous/bug_report.m: Open prefs file in text mode.

2005-08-16  John W. Eaton  <jwe@octave.org>

	* miscellaneous/computer.m: Handle optional maxsize and endian
	outputs.

2005-08-15  John W. Eaton  <jwe@octave.org>

	* strings/strcat.m: Allow single argument.

2005-07-18  John W. Eaton  <jwe@octave.org>

	* strings/strcmp.m: Delete.

2005-07-13  John W. Eaton  <jwe@octave.org>

	* deprecated/hypergeometric_rnd.m: Preserve compatibility with old
	versions of Octave.

2005-07-13  Ben Barrowes  <barrowes@alum.mit.edu>

	* statistics/distributions/betacdf.m: Rename from beta_cdf.m.
	* statistics/distributions/betainv.m: Rename from beta_inv.m.
	* statistics/distributions/betapdf.m: Rename from beta_pdf.m.
	* statistics/distributions/betarnd.m: Rename from beta_rnd.m.
	* statistics/distributions/binocdf.m: Rename from binomial_cdf.m.
	* statistics/distributions/binoinv.m: Rename from binomial_inv.m.
	* statistics/distributions/binopdf.m: Rename from binomial_pdf.m.
	* statistics/distributions/binornd.m: Rename from binomial_rnd.m.
	* statistics/distributions/chi2cdf.m: Rename from chisquare_cdf.m.
	* statistics/distributions/chi2inv.m: Rename from chisquare_inv.m.
	* statistics/distributions/chi2pdf.m: Rename from chisquare_pdf.m.
	* statistics/distributions/chi2rnd.m: Rename from chisquare_rnd.m.
	* statistics/distributions/expcdf.m: Rename from exponential_cdf.m.
	* statistics/distributions/expinv.m: Rename from exponential_inv.m.
	* statistics/distributions/exppdf.m: Rename from exponential_pdf.m.
	* statistics/distributions/exprnd.m: Rename from exponential_rnd.m.
	* statistics/distributions/fcdf.m: Rename from f_cdf.m.
	* statistics/distributions/finv.m: Rename from f_inv.m.
	* statistics/distributions/fpdf.m: Rename from f_pdf.m.
	* statistics/distributions/frnd.m: Rename from f_rnd.m.
	* statistics/distributions/gamcdf.m: Rename from gamma_cdf.m.