@@ -22,7 +22,7 @@
 ## Return a matrix the same shape as @var{A} which has 1 if
 ## @code{A(i,j)} is in @var{S} or 0 if it isn't.
 ## @end deftypefn
-## @seealso{unique, union, intersect, setxor, setdiff}
+## @seealso{unique, union, intersection, setxor, setdiff}
 
 ## Author: Paul Kienzle
 ## Adapted-by: jwe
