@@ -33,18 +33,18 @@
 
 ## Author: jwe
 
-function st = strcat (s, t, varargin)
+function st = strcat (s, varargin)
 
   if (nargin > 0)
     save_warn_empty_list_elements = warn_empty_list_elements;
     unwind_protect
       warn_empty_list_elements = 0;
-      if (isstr (s) && isstr (t))
-        tmpst = [s, t];
+      if (isstr (s))
+        tmpst = s;
       else
         error ("strcat: all arguments must be strings");
       endif
-      n = nargin - 2;
+      n = nargin - 1;
       k = 1;
       while (n--)
         tmp = varargin{k++};
